# Qt-Proj-UI

./: .gitignore  CMakeLists.txt  MapPanel.qml  MartinGCS.qmlproject  README.md  RightPanel.qml  main.cpp
